--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<title>HBD love </title>	    
         <link type="text/css" rel="stylesheet" href="default.css">
-		<script type="text/javascript" src="jquery.min.js"></script>
-		<script type="text/javascript" src="jscex.min.js"></script>
-		<script type="text/javascript" src="scex-parser.js"></script>
-		<script type="text/javascript" src="jscex-jit.js"></script>
-		<script type="text/javascript" src="jscex-builderbase.min.js"></script>
-		<script type="text/javascript" src="jscex-async.min.js"></script>
-		<script type="text/javascript" src="jscex-async-powerpack.min.js"></script>
-		<script type="text/javascript" src="functions.js" charset="utf-8"></script>
-		<script type="text/javascript" src="love.js" charset="utf-8"></script>
+		 <script type="text/javascript" src="jquery.min.js"></script>
+        <script type="text/javascript" src="jscex.min.js"></script>
+        <script type="text/javascript" src="jscex-parser.js"></script>
+        <script type="text/javascript" src="jscex-jit.js"></script>
+        <script type="text/javascript" src="jscex-builderbase.min.js"></script>
+        <script type="text/javascript" src="jscex-async.min.js"></script>
+        <script type="text/javascript" src="jscex-async-powerpack.min.js"></script>
+        <script type="text/javascript" src="functions.js" charset="utf-8"></script>
+        <script type="text/javascript" src="love.js" charset="utf-8"></script>
         <script>
             function playAudio() {
                 var audio = document.getElementById("myAudio");
