--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<title>HBD love </title>	    
+		<title>HBD</title>	    
        <link type="text/css" rel="stylesheet" href="/happy-birthday.../default.css">
     <script type="text/javascript" src="/happy-birthday.../jquery.min.js"></script>
     <script type="text/javascript" src="/happy-birthday.../jscex.min.js"></script>
