--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div id="text">
                     <div id="code">
                       <span class="say">→ Happiest Birthday, Tulika! 🎂</span><br>
-                      <span class="say">→ You are the bravest girl I know💪</span><br>             
+                      <span class="say">→ You are the bravest girl I know 🎀</span><br>             
                       <span class="say">→ Your special day, 09/09/2005, will always be remembered 🎉</span><br>
                       <span class="say">→ Your courage inspires me every day🙌</span><br>
                       <span class="say">→ Wishing you all the happiness and joy on your special day💖</span><br>
